# artoolkit5

./: .gitignore  Configure  configure  meson.build
examples/: meson.build
examples/multi/: meson.build  multiTest.c
examples/simple/: meson.build  simpleTest.c
examples/simpleLite/: meson.build  simpleLite.c
include/AR/: arFilterTransMat.h  arImageProc.h  config.h.in  gsub_lite.h  gsub_mtx.h  meson.build  videoLuma.h
include/AR/sys/: videoLinuxV4L2.h
lib/: meson.build
lib/SRC/: meson.build
lib/SRC/AR/: arCreateHandle.c  arDetectMarker.c  arDetectMarker2.c  arGetLine.c  arGetTransMat.c  arImageProc.c  arPattAttach.c  arPattCreateHandle.c  arUtil.c  mAlloc.c  mAllocMul.c  mAllocTrans.c  mFree.c  mMul.c  mTrans.c  meson.build  paramDecomp.c  paramLT.c
lib/SRC/AR/arLabelingSub/: meson.build
lib/SRC/AR2/: coord.c  featureMap.c  imageSet.c  marker.c  matching.c  meson.build  private.h  surface.c  util.c
lib/SRC/ARICP/: icpPointRobust.c  icpStereoPointRobust.c  meson.build
lib/SRC/ARMulti/: meson.build
lib/SRC/Gl/: argBase.c  argDrawImage.c  argFunction.c  gsubTest.c  gsub_lite.c  gsub_mtx.c  meson.build
lib/SRC/Util/: meson.build
lib/SRC/Video/: meson.build  video2.c  videoAspectRatio.c  videoLuma.c  videoSaveImage.c
lib/SRC/VideoLinuxV4L2/: meson.build  videoV4L2.c
