subdir('arLabelingSub')

ar_files = ar_labeling_sub_files + files(
    'ar3DCreateHandle.c',
    'ar3DUtil.c',
    'arCreateHandle.c',
    'arDetectMarker2.c',
    'arDetectMarker.c',
    'arFilterTransMat.c',
    'arGetLine.c',
    'arGetMarkerInfo.c',
    'arGetTransMat.c',
    'arGetTransMatStereo.c',
    'arImageProc.c',
    'arLabeling.c',
    'arPattAttach.c',
    'arPattCreateHandle.c',
    'arPattGetID.c',
    'arPattLoad.c',
    'arPattSave.c',
    'arUtil.c',
    'mAlloc.c',
    'mAllocDup.c',
    'mAllocInv.c',
    'mAllocMul.c',
    'mAllocTrans.c',
    'mAllocUnit.c',
    'mDet.c',
    'mDisp.c',
    'mDup.c',
    'mFree.c',
    'mInv.c',
    'mMul.c',
    'mPCA.c',
    'mSelfInv.c',
    'mTrans.c',
    'mUnit.c',
    'paramChangeSize.c',
    'paramClear.c',
    'paramDecomp.c',
    'paramDisp.c',
    'paramDistortion.c',
    'paramFile.c',
    'paramGetPerspective.c',
    'paramLT.c',
    'vAlloc.c',
    'vDisp.c',
    'vFree.c',
    'vHouse.c',
    'vInnerP.c',
    'vTridiag.c',
)

ar_lib = static_library('AR', ar_files,
    include_directories : ar_includes,
)
