ar_labeling_sub_files = files(
    'arLabelingSubDBIC.c',
    'arLabelingSubDBRC.c',
    'arLabelingSubDBZ.c',
    'arLabelingSubDWIC.c',
    'arLabelingSubDWRC.c',
    'arLabelingSubDWZ.c',
    'arLabelingSubEBIC.c',
    'arLabelingSubEBRC.c',
    'arLabelingSubEBZ.c',
    'arLabelingSubEWIC.c',
    'arLabelingSubEWRC.c',
    'arLabelingSubEWZ.c',
)
